# pilatus-synthesizer

./: .gitignore  COPILOT-INIT.md  MIGRATION_PLAN.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  upload_to_pypi.yml
legacy/synthesizer-0_4_8-x64/test/: .coverage  __test.py  __test_007_ChangeableLogger.py  __test_011_PilatusImageViewer.py  __test_argv.py  temp.py  (+47 more)
pilatus_synthesizer/: __init__.py  app.py
pilatus_synthesizer/_keklib/: basic_utils.py  changeable_logger.py  control_key_state.py  exception_traceback.py  our_color_maps.py  our_exception.py  our_matplotlib.py  our_messagebox.py  our_tkinter.py  persistent_info.py  tk_dnd_wrapper.py  tk_supplements.py  tk_utils.py
pilatus_synthesizer/cli/: command.py
pilatus_synthesizer/config/: development.py  preferences.py  settings.py  version.py
pilatus_synthesizer/core/: __init__.py  image_io.py  image_property.py  image_synthesizer.py  minimal_tiff.py  pilatus_counter.py  pilatus_image.py  pilatus_utils.py  pilatus_utils_new_style.py  pilatus_utils_old_style.py  sangler_mask.py
pilatus_synthesizer/gui/: auto_run.py  controller.py  create_folder_dialog.py  detector_settings.py  developer_options.py  image_property.py  image_synthesizer.py  image_table.py  image_viewer.py  preferences.py  settings_frame.py  zoom_pan.py
tests/: conftest.py  test_autorun_manual.py  test_basic_utils.py  test_command.py  test_image_synthesizer.py  test_minimal_tiff.py  test_pilatus_counter.py  test_pilatus_image.py  test_pilatus_utils.py  test_preferences.py  test_sangler_mask.py  test_settings.py
(+62 files in other folders)
